--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 include ':sample', ':kin-sdk'
 if (!System.env.JITPACK) {
     include ':kin-base'
-    project(":kin-base").projectDir = file("android-stellar-sdk/kin-base")
+    project(":kin-base").projectDir = file("kin-base")
 }
