--- a/kin-sdk/build.gradle
+++ b/kin-sdk/build.gradle
@@ -17,7 +17,7 @@ android {
         versionCode 1
         versionName "1.0"
         consumerProguardFiles 'proguard-rules.pro'
-        testInstrumentationRunner "kin.core.MultiDexAndroidJUnitRunner"
+        testInstrumentationRunner "kin.sdk.MultiDexAndroidJUnitRunner"
         multiDexEnabled true
     }
 
