--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "kin.core.sample"
+        applicationId "kin.sdk.sample"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
