--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -38,6 +38,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     api project(':kin-sdk')
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
