make travis CI to run unit test on both libs by using: ./gradlew testDebugUnitTest instead of specifying only kin-sdk : ./gradlew :kin-sdk:testDebugUnitTest

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,8 @@ before_script:
 script:
   - cd ../..
   - ./gradlew :sample:assembleDebug
-  - ./gradlew :kin-sdk:testDebugUnitTest
+  - ./gradlew testDebugUnitTest
+
 #  - ./gradlew jacocoTestReport  -Pandroid.testInstrumentationRunnerArguments.notClass=kin.sdk.KinAccountIntegrationTest --info
 
 after_success:
