--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':sample', ':kin-sdk', 'kin-base'
+include ':sample', ':kin-sdk', ':hello-world', 'kin-base'
 project(":kin-base").projectDir = file("kin-base")
