1. Change project structure in order to create folder for each module. In this commit we added the recovery-sample to the kin-recovery Later we will also add all the code for that sample module.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include  ':kin-sdk:sdk', ':kin-sdk:base', ':kin-sdk:sample', ':kin-recovery:recovery'
+include  ':kin-sdk:sdk', ':kin-sdk:base', ':kin-sdk:sample', ':kin-recovery:recovery', ':kin-recovery:recovery-sample'
