--- a/kin-sdk/sample/src/main/AndroidManifest.xml
+++ b/kin-sdk/sample/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name="kin.sdk.sample.KinClientSampleApplication"
+        android:name="sdk.sample.KinClientSampleApplication"
         android:roundIcon="@mipmap/ic_launcher_rounded"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name="kin.sdk.sample.ChooseNetworkActivity"
+            android:name="sdk.sample.ChooseNetworkActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -25,32 +25,32 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="kin.sdk.sample.CreateWalletActivity"
-            android:parentActivityName="kin.sdk.sample.ChooseNetworkActivity"
+            android:name="sdk.sample.CreateWalletActivity"
+            android:parentActivityName="sdk.sample.ChooseNetworkActivity"
             android:screenOrientation="portrait"
             />
         <activity
-            android:name="kin.sdk.sample.WebWrapperActivity"
-            android:parentActivityName="kin.sdk.sample.ChooseNetworkActivity"
+            android:name="sdk.sample.WebWrapperActivity"
+            android:parentActivityName="sdk.sample.ChooseNetworkActivity"
             android:screenOrientation="portrait"
             />
         <activity
-            android:name="kin.sdk.sample.WalletActivity"
-            android:parentActivityName="kin.sdk.sample.ChooseNetworkActivity"
+            android:name="sdk.sample.WalletActivity"
+            android:parentActivityName="sdk.sample.ChooseNetworkActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name="kin.sdk.sample.TransactionActivity"
-            android:parentActivityName="kin.sdk.sample.WalletActivity"
+            android:name="sdk.sample.TransactionActivity"
+            android:parentActivityName="sdk.sample.WalletActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"/>
         <activity
-            android:name="kin.sdk.sample.PaymentListenerActivity"
-            android:parentActivityName="kin.sdk.sample.WalletActivity"
+            android:name="sdk.sample.PaymentListenerActivity"
+            android:parentActivityName="sdk.sample.WalletActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"/>
         <activity
-            android:name="kin.sdk.sample.ExportKeystoreActivity"
-            android:parentActivityName="kin.sdk.sample.WalletActivity"
+            android:name="sdk.sample.ExportKeystoreActivity"
+            android:parentActivityName="sdk.sample.WalletActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"/>
 
