1. Comment(skip) emulator stuff until fix travis 2. add keystore signing to recovery sample 3. fix keystore path in all samples

--- a/kin-sdk/sample/build.gradle
+++ b/kin-sdk/sample/build.gradle
@@ -15,7 +15,7 @@ android {
         kintest_keystore {
             keyAlias 'kintest'
             keyPassword 'kintest'
-            storeFile file('../kintest.keystore')
+            storeFile file('../../kintest.keystore')
             storePassword 'kintest'
         }
     }
