--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ cache:
 env:
   global:
     - ANDROID_API_LEVEL=26
-    - EMULATOR_API_LEVEL=16
+#    - EMULATOR_API_LEVEL=16
 
 android:
   components:
@@ -29,16 +29,16 @@ android:
   - platform-tools
   - build-tools-26.0.2
   - android-$ANDROID_API_LEVEL
-  - android-$EMULATOR_API_LEVEL
+  #  - android-$EMULATOR_API_LEVEL
   - sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
-  - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
+#  - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
 
-before_script:
-  # setup android emulator
-  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window -camera-back none -camera-front none -verbose -memory 2048 &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+#before_script:
+#  # setup android emulator
+#  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
+#  - emulator -avd test -no-skin -no-audio -no-window -camera-back none -camera-front none -verbose -memory 2048 &
+#  - android-wait-for-emulator
+#  - adb shell input keyevent 82 &
 
 script:
   - ./gradlew assemble
