--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,9 @@ android:
   - sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
 #  - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
   licenses:
-  - 'android-sdk-preview-license-52d11cd2'
-  - 'android-sdk-license-.+'
-  - 'google-gdk-license-.+'
+  - android-sdk-preview-license-52d11cd2
+  - android-sdk-license-.+
+  - google-gdk-license-.+
 
 #before_script:
 #  # setup android emulator
