--- a/.travis.yml
+++ b/.travis.yml
@@ -41,12 +41,15 @@ android:
   - android-sdk-license-.+
   - google-gdk-license-.+
 
-#before_script:
+before_script:
 #  # setup android emulator
 #  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
 #  - emulator -avd test -no-skin -no-audio -no-window -camera-back none -camera-front none -verbose -memory 2048 &
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
+
+- mkdir -p "$ANDROID_HOME/licenses"
+- cp ./google-licenses/* "$ANDROID_HOME/licenses/"
 
 script:
   - ./gradlew assemble
