--- a/kin-recovery/recovery-sample/build.gradle
+++ b/kin-recovery/recovery-sample/build.gradle
@@ -2,8 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
+
         applicationId "recovery.sample"
         minSdkVersion 16
         targetSdkVersion 28
@@ -12,7 +14,6 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     signingConfigs {
         kintest_keystore {
             keyAlias 'kintest'
@@ -21,7 +22,6 @@ android {
             storePassword 'kintest'
         }
     }
-
     buildTypes {
         release {
             minifyEnabled true
@@ -29,16 +29,21 @@ android {
             signingConfig signingConfigs.kintest_keystore
         }
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     api project(':kin-recovery:recovery')
     api project(':kin-sdk:sdk')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
