--- a/.travis.yml
+++ b/.travis.yml
@@ -47,16 +47,21 @@ script:
   - echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
   - ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
   - ./google-cloud-sdk/bin/gcloud firebase test android run  \
-      --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk \
-      --test kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk  \
-      --device model=Nexus5X,version=25,locale=en --no-record-video --no-performance-metrics \
-      --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec \
-      --directories-to-pull=/sdcard/tmp
-  - ./google-cloud-sdk/bin/gcloud firebase test android run  \
-    --type instrumentation --app kin-backup-and-restore/kin-backup-and-restore-sample/build/outputs/apk/debug/kin-backup-and-restore-sample-debug.apk \
-    --test  kin-backup-and-restore/kin-backup-and-restore/build/outputs/apk/androidTest/debug/kin-backup-and-restore-debug-androidTest.apk \
+    --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk \
+    --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk \
     --device model=Nexus5X,version=25,locale=en \
+    --no-record-video \
+    --no-performance-metrics \
     --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec \
     --directories-to-pull=/sdcard/tmp
+  - ./google-cloud-sdk/bin/gcloud firebase test android run  \
+    --type instrumentation --app kin-backup-and-restore/kin-backup-and-restore-sample/build/outputs/apk/debug/kin-backup-and-restore-sample-debug.apk \
+    --test kin-backup-and-restore/kin-backup-and-restore/build/outputs/apk/androidTest/debug/kin-backup-and-restore-debug-androidTest.apk \
+    --device model=Nexus5X,version=25,locale=en \
+    --no-record-video \
+    --no-performance-metrics \
+    --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec \
+    --directories-to-pull=/sdcard/tmp
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
