--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ cache:
     - node_modules
 
 env:
+  - TEST_MATRIX=assemble
+  - TEST_MATRIX=units
+  - TEST_MATRIX=android_test_kin_sdk
+  - TEST_MATRIX=android_test_backup_restore
   global:
   - ANDROID_API_LEVEL=26
 
@@ -34,26 +38,31 @@ android:
   - android-$ANDROID_API_LEVEL
 
 script:
-  #- ./gradlew assemble
-  - ./gradlew assembleDebug
-  - ./gradlew testDebugUnitTest
-  - ./gradlew assembleAndroidTest
-#  - ./gradlew jacocoTestReport  -Pandroid.testInstrumentationRunnerArguments.notClass=kin.sdk.KinAccountIntegrationTest --info
-  - openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
-  - wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
-  - tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
-  - echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
-  - ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
-  - ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
-  - ./google-cloud-sdk/bin/gcloud firebase test android run  --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video  --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
-  - ./google-cloud-sdk/bin/gcloud firebase test android run  \
-    --type instrumentation --app kin-backup-and-restore/kin-backup-and-restore-sample/build/outputs/apk/debug/kin-backup-and-restore-sample-debug.apk \
-    --test kin-backup-and-restore/kin-backup-and-restore/build/outputs/apk/androidTest/debug/kin-backup-and-restore-debug-androidTest.apk \
-    --device model=Nexus5X,version=25,locale=en \
-    --no-record-video \
-    --no-performance-metrics \
-    --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec \
-    --directories-to-pull=/sdcard/tmp
+  if [[ "$TEST_MATRIX" == "assemble" ]];
+  then
+    ./gradlew assemble
+  elif [[ "$TEST_MATRIX" == "units" ]];
+  then
+    ./gradlew testDebugUnitTest
+  elif [[ "$TEST_MATRIX" == "android_test_kin_sdk" ]];
+  then
+    openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
+    wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+    tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+    echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
+    ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
+    ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
+    ./google-cloud-sdk/bin/gcloud firebase test android run  --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video  --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
+  elif [[ "$TEST_MATRIX" == "android_test_backup_restore" ]];
+  then
+    openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
+    wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+    tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+    echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
+    ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
+    ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
+    ./google-cloud-sdk/bin/gcloud firebase test android run --type instrumentation --app kin-backup-and-restore/kin-backup-and-restore-sample/build/outputs/apk/debug/kin-backup-and-restore-sample-debug.apk --test kin-backup-and-restore/kin-backup-and-restore/build/outputs/apk/androidTest/debug/kin-backup-and-restore-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
+  fi
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
