--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ cache:
     - node_modules
 
 env:
-- ANDROID_API_LEVEL=26
 - TEST_MATRIX=assemble
 - TEST_MATRIX=units
 - TEST_MATRIX=android_test_kin_sdk
@@ -34,17 +33,15 @@ android:
   - tools
   - platform-tools
   - build-tools-26.0.2
-  - android-$ANDROID_API_LEVEL
+  - android-26
 
 script:
-  if [[ "$TEST_MATRIX" == "assemble" ]];
-  then
+  - |
+  if [ $TEST_MATRIX == "assemble" ]; then
     ./gradlew assemble
-  elif [[ "$TEST_MATRIX" == "units" ]];
-  then
+  elif [ $TEST_MATRIX == "units" ]; then
     ./gradlew testDebugUnitTest
-  elif [[ "$TEST_MATRIX" == "android_test_kin_sdk" ]];
-  then
+  elif [ $TEST_MATRIX == "android_test_kin_sdk" ]; then
     openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
     wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
     tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
@@ -52,8 +49,7 @@ script:
     ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
     ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
     ./google-cloud-sdk/bin/gcloud firebase test android run  --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video  --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
-  elif [[ "$TEST_MATRIX" == "android_test_backup_restore" ]];
-  then
+  elif [ $TEST_MATRIX == "android_test_backup_restore" ]; then
     openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
     wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
     tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
