--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ script:
     elif [ $TEST_MATRIX == "units" ]; then
       ./gradlew testDebugUnitTest
     elif [ $TEST_MATRIX == "android_test_kin_sdk" ]; then
+      ./gradlew :kin-sdk:kin-sdk-sample:assembleDebug
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
       wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
       tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
@@ -50,6 +51,7 @@ script:
       ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
       ./google-cloud-sdk/bin/gcloud firebase test android run  --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video  --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
     elif [ $TEST_MATRIX == "android_test_backup_restore" ]; then
+      ./gradlew :kin-backup-and-restore:kin-backup-and-restore-sample:assembleDebug
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
       wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
       tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
