--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ cache:
     - node_modules
 
 env:
+- CLOUDSDK_CORE_DISABLE_PROMPTS=1
 - TEST_MATRIX=assemble
 - TEST_MATRIX=units
 - TEST_MATRIX=android_test_kin_sdk
@@ -45,9 +46,11 @@ script:
       ./gradlew :kin-sdk:kin-sdk-sample:assembleDebug
       ./gradlew :kin-sdk:kin-sdk:assembleAndroidTest
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
-      if [ ! -d ${HOME}/google-cloud-sdk ]; then
-        wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
-        tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+      if [ ! -d $HOME/google-cloud-sdk/bin ]; then
+        # The install script errors if this directory already exists,
+        # but Travis already creates it when we mark it as cached.
+        rm -rf $HOME/google-cloud-sdk;
+        curl https://sdk.cloud.google.com | bash;
       fi
       echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
       ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
@@ -57,9 +60,11 @@ script:
       ./gradlew :kin-backup-and-restore:kin-backup-and-restore-sample:assembleDebug
       ./gradlew :kin-backup-and-restore:kin-backup-and-restore:assembleAndroidTest
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
-      if [ ! -d ${HOME}/google-cloud-sdk ]; then
-        wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
-        tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+      if [ ! -d $HOME/google-cloud-sdk/bin ]; then
+        # The install script errors if this directory already exists,
+        # but Travis already creates it when we mark it as cached.
+        rm -rf $HOME/google-cloud-sdk;
+        curl https://sdk.cloud.google.com | bash;
       fi
       echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
       ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
