--- a/.travis.yml
+++ b/.travis.yml
@@ -42,10 +42,8 @@ script:
     elif [ $TEST_MATRIX == "units" ]; then
       ./gradlew testDebugUnitTest
     elif [ $TEST_MATRIX == "android_test_kin_sdk" ]; then
-      ./gradlew :kin-sdk:kin-sdk-sample:assembleDebug
-      ./gradlew :kin-sdk:kin-sdk:assembleAndroidTest
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
-      tree -d ./google-cloud-sdk
+      ls -R ./google-cloud-sdk
       if [ ! -d ${HOME}/google-cloud-sdk ]; then
         wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
         tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
