--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,9 @@ script:
       ./gradlew testDebugUnitTest
     elif [ $TEST_MATRIX == "android_test_kin_sdk" ]; then
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
+      echo "PWD = "
+      pwd
+      echo "PWD end"
       ls -R $HOME/google-cloud-sdk
       wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
       tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
