--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ cache:
     - $HOME/.gradle/native
     - $HOME/.gradle/daemon
     - $HOME/.android/build-cache
-    - $HOME/google-cloud-sdk/
+    - $HOME/build/kinecosystem/kin-sdk-android/google-cloud-sdk/
     - node_modules
 
 env:
@@ -46,10 +46,10 @@ script:
       echo "PWD = "
       pwd
       echo "PWD end"
-      ls -R $HOME/google-cloud-sdk
-      wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
-      tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
-      echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
+      if [ ! -d ./google-cloud-sdk ]; then
+        wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+        tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+      fi
       ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
       ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
       ./google-cloud-sdk/bin/gcloud firebase test android run  --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video  --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
