--- a/.travis.yml
+++ b/.travis.yml
@@ -42,10 +42,9 @@ script:
     elif [ $TEST_MATRIX == "units" ]; then
       ./gradlew testDebugUnitTest
     elif [ $TEST_MATRIX == "android_test_kin_sdk" ]; then
+      ./gradlew :kin-sdk:kin-sdk-sample:assembleDebug
+      ./gradlew :kin-sdk:kin-sdk:assembleAndroidTest
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
-      echo "PWD = "
-      pwd
-      echo "PWD end"
       if [ ! -f ./google-cloud-sdk/bin/gcloud ]; then
         wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
         tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
@@ -57,7 +56,7 @@ script:
       ./gradlew :kin-backup-and-restore:kin-backup-and-restore-sample:assembleDebug
       ./gradlew :kin-backup-and-restore:kin-backup-and-restore:assembleAndroidTest
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
-      if [ ! -d ${HOME}/google-cloud-sdk ]; then
+      if [ ! -f ./google-cloud-sdk/bin/gcloud ]; then
         wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
         tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
       fi
