--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,12 @@ script:
       fi
       ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
       ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
-      ./google-cloud-sdk/bin/gcloud firebase test android run  --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video  --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
+      coverageDir=kin-sdk-android-${TRAVIS_JOB_NUMBER}
+      ./google-cloud-sdk/bin/gcloud firebase test android run  --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video  --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/coverage.ec --directories-to-pull=/sdcard --results-dir ${coverageDir}
+      coverageFile=`gsutil ls gs://test-lab-inaujqqz4p0pm-ha62k9dmaid32/${coverageDir}/**/*.ec | tail -1`
+      mkdir ./build/jacoco
+      ./google-cloud-sdk/bin/gsutil cp $coverageFile ./build/jacoco
+      ./gradlew :kin-sdk:kin-sdk:jacocoTestReport
     elif [ $TEST_MATRIX == "android_test_backup_restore" ]; then
       ./gradlew :kin-backup-and-restore:kin-backup-and-restore-sample:assembleDebug
       ./gradlew :kin-backup-and-restore:kin-backup-and-restore:assembleAndroidTest
@@ -60,10 +65,14 @@ script:
         wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
         tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
       fi
-      echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
       ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
       ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
-      ./google-cloud-sdk/bin/gcloud firebase test android run --type instrumentation --app kin-backup-and-restore/kin-backup-and-restore-sample/build/outputs/apk/debug/kin-backup-and-restore-sample-debug.apk --test kin-backup-and-restore/kin-backup-and-restore/build/outputs/apk/androidTest/debug/kin-backup-and-restore-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
+      coverageDir=kin-sdk-android-${TRAVIS_JOB_NUMBER}
+      ./google-cloud-sdk/bin/gcloud firebase test android run --type instrumentation --app kin-backup-and-restore/kin-backup-and-restore-sample/build/outputs/apk/debug/kin-backup-and-restore-sample-debug.apk --test kin-backup-and-restore/kin-backup-and-restore/build/outputs/apk/androidTest/debug/kin-backup-and-restore-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video --no-performance-metrics --environment-variables coverage=true,coverageFile="/sdcard/coverage.ec" --directories-to-pull /sdcard --results-dir ${coverageDir}
+      coverageFile=`gsutil ls gs://test-lab-inaujqqz4p0pm-ha62k9dmaid32/${coverageDir}/**/*.ec | tail -1`
+      mkdir ./build/jacoco
+      ./google-cloud-sdk/bin/gsutil cp $coverageFile ./build/jacoco
+      ./gradlew :kin-backup-and-restore:kin-backup-and-restore:jacocoTestReport
     fi
 
 after_success:
