--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
   - docker
 
 before_install:
-- yes | sdkmanager "platforms;android-26"
-- yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "platforms;android-26"
+  - yes | sdkmanager "platforms;android-28"
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -23,10 +23,11 @@ cache:
     - node_modules
 
 env:
-- TEST_MATRIX=assemble
-- TEST_MATRIX=units
-- TEST_MATRIX=android_test_kin_sdk
-- TEST_MATRIX=android_test_backup_restore
+  - TEST_MATRIX=assemble
+  - TEST_MATRIX=units
+  - TEST_MATRIX=android_test_kin_sdk
+  - TEST_MATRIX=android_test_backup_restore
+  - TEST_MATRIX=android_test_backup_restore_ui
 
 android:
   components:
@@ -38,8 +39,9 @@ android:
 script:
   - if [ $TEST_MATRIX == "assemble" ]; then ./scripts/ci_assemble.sh; fi
   - if [ $TEST_MATRIX == "units" ]; then ./scripts/ci_unit_test.sh; fi
-  - if [ $TEST_MATRIX == "android_test_kin_sdk" ]; then ./scripts/ci_android_test_with_firebase.sh kin-sdk kin-sdk-lib 2; fi
-  - if [ $TEST_MATRIX == "android_test_backup_restore" ]; then ./scripts/ci_android_test_with_firebase.sh kin-backup-and-restore kin-backup-and-restore-lib 0; fi
+  - if [ $TEST_MATRIX == "android_test_kin_sdk" ]; then ./scripts/ci_android_test_with_firebase.sh kin-sdk kin-sdk-sample kin-sdk-lib 2; fi
+  - if [ $TEST_MATRIX == "android_test_backup_restore" ]; then ./scripts/ci_android_test_with_firebase.sh kin-backup-and-restore kin-backup-and-restore-sample kin-backup-and-restore-lib 0; fi
+  - if [ $TEST_MATRIX == "android_test_backup_restore_ui" ]; then ./scripts/ci_android_test_with_firebase.sh kin-backup-and-restore kin-backup-and-restore-ui-tests kin-backup-and-restore-ui-tests 0; fi
 
 after_success:
   - if [ $TEST_MATRIX != "assemble" ]; then bash <(curl -s https://codecov.io/bash); fi
